# Image-intelligence

./: .env.example  .gitignore  docker-compose.yml  pyproject.toml
infra/: package-lock.json
infra/lib/: infra-stack.ts
infra/lib/construct/: S3bucket.ts  firstLambda.ts
server/: Dockerfile  const.py  main.py
server/db/: mongo.py
server/router/: analyze.py  history.py
server/schemas/: analysis_schema.py  request_schemas.py
server/services/: ai_service.py  storage.py
server/utils/: utils.py
